--- a/wp-content/themes/hello-elementor/editor.css
+++ b/wp-content/themes/hello-elementor/editor.css
@@ -1,5 +1,5 @@
 /**
- * Elementor editor styling
+ * Style for the Elementor customizer.
  */
 .elementor-panel-menu-item-hello-settings-header {
   border-radius: 6px 6px 0 0;
