--- a/wp-content/themes/hello-elementor/classic-editor.css
+++ b/wp-content/themes/hello-elementor/classic-editor.css
@@ -1,5 +1,5 @@
 /**
- * Classic editor styling
+ * Style for your classic editor.
  */
 /**
  * DO NOT CHANGE THIS FILE!
@@ -7,7 +7,7 @@
  * Loading first in the style.scss & classic-editor.scss
  */
 p {
-  margin-block-end: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 img {
